# popcorn-time-api

./: pyproject.toml  setup.py
popcorntime/: popcorntime.py
src/popcorn_time_api/: popcorntime.py
